add users table and user model

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,43 @@
-<h1>This is the home page!</h1>
-<%= link_to 'Articles listing', articles_path %> |
-<%= link_to 'About page', about_path %>
+<%# <div id="page-content">
+  <div class = "container" id="home-container">
+    <div class="jumbotron text-center text-white d-flex align-self-center ">
+      <div class="container container__padding-top">
+        <h1 class="display-4">Alpha Blog</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <a class="btn btn-success btn-lg" href="#" role="button">Sign up!</a>
+        <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg"
+</div>
+</div>
+</div>
+<%# <div id= "page-content">
+  <footer id="sticky-footer" class = "py-4 bg-dark text-white-50">
+    <div class="container text-center">
+      <small>Copyright &copy; Todd's Blog</small>
+    </div>
+  </footer> %>
+<%# <footer class="footer mt-auto py-3 bg-dark " id="sticky-footer">
+  <div class="container text-center ">
+    <span class="text-white">Copyright &copy; Todd's Blog</span>
+  </div>
+</footer>
+</div> %>
+<main class="flex-shrink-0">
+  <div class = "container" id="home-container">
+    <div class="jumbotron text-center text-white d-flex align-self-center ">
+      <div class="container container__padding-top">
+        <h1 class="display-4">Alpha Blog</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <a class="btn btn-success btn-lg" href="#" role="button">Sign up!</a>
+      </div>
+    </div>
+  </div>
+</main>
+<footer class="footer mt-auto py-3 bg-dark">
+  <div class="container text-center">
+    <span class="text-white">Copyright &copy; <%= link_to "Todd's Github", "https://github.com/xfroggy", class: "text-white text-underline-hover" %> </span>
+  </div>
+</footer>
