--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,2 @@
-<h1>Create a new Article</h1>
+<h1 class="text-center mt-4">Create a new Article</h1>
 <%= render 'form' %>
-<%= link_to 'Return to articles listing', articles_path%>
