--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <%= render 'errors' %>
   <div class="row justify-content-center">
     <div class="col-10">
+      <%= render 'shared/errors' %>
       <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
         <div class="form-group row mb-3">
           <%= f.label :title, class: "col-2 col-form-label text-light" %>
